--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+<meta http-equiv="Refresh" content="0;url=https://us3.campaign-archive.com/?u=0662e77da36b5cb1c90f1d7a1&id=6ffebba7ec/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
