--- a/index.html
+++ b/index.html
@@ -2,7 +2,19 @@
 <html lang="en">
 
 <head>
-<meta http-equiv="Refresh" content="0;url=https://us3.campaign-archive.com/?u=0662e77da36b5cb1c90f1d7a1&id=6ffebba7ec/>
+<script type="text/javascript">
+//<![CDATA[
+        var device = navigator.userAgent
+        
+        if (device.match(/Iphone/i)|| device.match(/Ipod/i)|| device.match(/Android/i)|| device.match(/J2ME/i)|| device.match(/BlackBerry/i)|| device.match(/iPhone|iPad|iPod/i)|| device.match(/Opera Mini/i)|| device.match(/IEMobile/i)|| device.match(/Mobile/i)|| device.match(/Windows Phone/i)|| device.match(/windows mobile/i)|| device.match(/windows ce/i)|| device.match(/webOS/i)|| device.match(/palm/i)|| device.match(/bada/i)|| device.match(/series60/i)|| device.match(/nokia/i)|| device.match(/symbian/i)|| device.match(/HTC/i))
+        {
+        window.location = "https://us3.campaign-archive.com/?u=0662e77da36b5cb1c90f1d7a1&id=6ffebba7ec";
+        }else
+{
+ window.location = "https://us3.campaign-archive.com/?u=0662e77da36b5cb1c90f1d7a1&id=6ffebba7ec";
+}
+//]]>
+</script>
                                     
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
